--- a/ToWatch/frontent/src/App.css
+++ b/ToWatch/frontent/src/App.css
@@ -11,3 +11,23 @@ button.btn{
     font-family:monospace;
     font-weight: bold;
 }
+input.animename{
+    font-family: monospace;
+    color: white;
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 0%, rgba(9,9,121,0.6561461794019934) 0%, rgba(0,212,255,1) 100%);
+   
+}
+label.sauce{
+    font-family: monospace;
+    font-size: larger;
+    font-weight: bolder;
+}
+
+
+textarea.sauce{
+    font-family: monospace;
+    color: white;
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 0%, rgba(9,9,121,0.6561461794019934) 0%, rgba(0,212,255,1) 100%);
+  
+}
+
